# fcart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  make_uf2.py  meson.build  meson.options
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
board/: .gitignore  fcart-bom.html  fcart.kicad_pcb  fcart.kicad_pro  fcart.kicad_sch  ibom.config.ini
cmake/: AddQuartusProject.cmake  FindQuartus.cmake  FindQuesta.cmake  QuartusReport.tcl
hw/: CMakeLists.txt  Dockerfile  meson.build  meson.options  summary.py
hw/bench/: CMakeLists.txt  Config-AC.v  W9825G6KH.v  api_tb.sv  fifo_tb.sv  meson.build  mt48lc4m16a2.v  qspi_tb.sv  sdio_tb.sv  sdram_tb.sv  spi_tb.sv
hw/cmake/: AddQuartusProject.cmake  QuartusTimings.tcl
hw/docker/: Dockerfile  compose.yml  docker_cmd.py
hw/launcher/: main.s  mem.py  meson.build  nes.cfg  nes_debug.cfg
hw/loader/: CMakeLists.txt  altserial_flash_loader.v  debug.s  loader.sdc  loader.sv  loader.tcl  main.s  meson.build  nes.cfg  nes_debug.cfg  sld_virtual_jtag.v
hw/src/: CMakeLists.txt  GSR.v  api.sv  bidir_bus.sv  chr_ram.sv  chr_rom.sv  chr_rom_ufm.sv  crc16.sv  crc7.sv  diamond.tcl.in  fcart.cof  fcart.lpf  fcart.sdc  fcart.sv  fcart.tcl  fifo.sv  joy_snoop.sv  map_bus.sv  map_mux.sv  memtest.sv  meson.build  mux8bit.sv  pll.v  prg_ram.sv  prg_rom.sv  qspi.sv  qspi_bus.sv  quartus.tcl.in  rom.sv  sdio.sv  sdio_bus.sv  sdio_cmd.sv  sdio_dat.sv  sdram.sv  sdram_arbiter.sv  sdram_bus.sv  snd_dac.sv  spi.sv  spi_bus.sv  state_recorder.sv  (+1 more)
hw/src/ip/: pll.v  ufm.qip  ufm.v
hw/src/ip/submodules/: altera_onchip_flash.sdc  altera_onchip_flash.v  altera_onchip_flash_avmm_csr_controller.v  altera_onchip_flash_avmm_data_controller.v  altera_onchip_flash_util.v
hw/src/ip/submodules/rtl/: altera_onchip_flash_block.v
hw/src/mappers/: generic.sv  launcher.sv  loader.sv  main.sv  map.svh  map_bus.sv  meson.build  nrom.sv
hw/src/mappers/MMC/: MMC1.sv  MMC3.sv  meson.build
hw/src/mappers/MMC1/: MMC1.sv  meson.build
hw/src/mappers/Sunsoft/: FME7.sv  meson.build  ym2149.sv
hw/src/mappers/VRC/: VRC4.sv  VRC6.sv  meson.build  vrc6_sound.sv  vrc_irq.sv
hw/src/mappers/generic/: AxROM.sv  CNROM.sv  NROM.sv  UxROM.sv  meson.build
shell/: Bottom.stl  Top.stl  fcart.FCStd
subprojects/: stm32-cmsis-f4.wrap  stm32-hal-f4.wrap
subprojects/packagefiles/stm32-cmsis-f4/: meson.options
sw/: CMakeLists.txt  build.ini  cross.ini  meson.build  meson.options  prj.conf
sw/boards/fcart/: Kconfig.fcart  board.yml  fcart.dts  fcart_defconfig
sw/bootloader/: fpga_cfg.c  fpga_cfg.h  main.c  meson.build  msc.c  uf2.c  uf2.h  virt_fat.c  virt_fat.h
sw/drivers/: assert.c  flash.ld.in  fpga.c  fpga.h  gpio.c  gpio.h  hal_msp.c  internal.h  interrupts.c  jtag.c  jtag.h  led.c  led.h  linker.ld  linker.ld.in  log.c  log.h  meson.build  qspi.c  qspi.h  soc.c  soc.h  spi.c  spi.h  syscalls.c  tusb_config.h  usb_descriptors.c
sw/drivers/fatfs/: diskio.c  diskio.h  ff.h  ffconf.h  meson.build
sw/lib/: CMakeLists.txt
sw/lib/common/: CMakeLists.txt  bitwise.c  bitwise.h  board.h  crc.c  crc.h  trace.h
sw/lib/jtag/: CMakeLists.txt  altera.c  altera.h  jtag.c  jtag.h  jtag.pio
sw/lib/paint/: CMakeLists.txt  paint.c  paint.h
sw/lib/sd/: CMakeLists.txt  rtc.c  sdcard.h  sdcard_priv.c  sdcard_priv.h  sdcard_sdio.c  sdcard_spi.c
sw/lib/sd/fatfs/: diskio.h
sw/lib/sdio/: CMakeLists.txt  sdio.c  sdio.h  sdio.pio
sw/nesrom/: CMakeLists.txt  main.s  nes.cfg
sw/src/: CMakeLists.txt  dirlist.c  dirlist.h  err.c  err.h  font8x8.h  fpga.c  fpga.h  fpga_api.c  fpga_api.h  fpga_cfg.c  fpga_cfg.h  fpga_flash.c  fpga_flash.h  fpga_mgmt.c  fpga_mgmt.h  gfx.c  gfx.h  joypad.c  joypad.h  main.c  meson.build  msc.c  qspi.c  qspi.h  rom.c  rom.h  sensor.c  sensor.h  sensors.c  ui.c  ui.h
sw/subprojects/: .gitignore  stm32-cmsis-f4.wrap  stm32-cmsis.wrap  stm32-cube-f4.wrap  stm32-hal-f4.wrap  tinyusb.wrap
sw/subprojects/packagefiles/stm32-cmsis/: meson.build
sw/subprojects/packagefiles/stm32-cmsis-f4/: meson.build
sw/subprojects/packagefiles/stm32-cube-f4/: meson.build  meson.options
sw/subprojects/packagefiles/stm32-hal-f4/: gen_hal_conf.py  meson.build  meson.options
sw/subprojects/packagefiles/tinyusb/: meson.build
sw/util/: CMakeLists.txt  sd_speed_test.c
web/: dfu.js  index.html
