# SW (Firmware) options
option('pinctrl', type: 'array', description: ' Pin control')
option('heap_size', type: 'string', description: 'Heap size')
option('stack_size', type: 'string', description: 'Stack size')
option('ram_origin', type: 'string', description: 'RAM origin')
option('ram_size', type: 'integer', description: 'RAM size')
option('flash_origin', type: 'string', description: 'Flash origin')
option('flash_size', type: 'integer', description: 'Flash size')
option('hse_freq', type: 'string', description: 'HSE frequency')
option('bootloader_size', type: 'integer', description: 'Bootloader size')
option(
    'bootloader_address',
    type: 'string',
    description: 'Bootloader start address',
)
option('app_address', type: 'string', description: 'Application start address')
option(
    'app_header_magic',
    type: 'string',
    description: 'Application header magic number',
)
option(
    'pll_divm',
    type: 'integer',
    min: 2,
    max: 63,
    value: 2,
    description: 'PLL M divider',
)
option(
    'default_log_level',
    type: 'integer',
    min: 0,
    max: 3,
    value: 0,
    description: 'Default log level',
)
option(
    'enable_semihosting',
    type: 'boolean',
    value: false,
    description: 'Enable semihosting',
)

# HW (FPGA) options
option(
    'diamond_search_path',
    type: 'string',
    description: 'Path to Lattice Diamond binary',
)
option(
    'questa_search_path',
    type: 'string',
    description: 'Path to Questasim binary',
)
option(
    'device',
    type: 'string',
    value: 'LCMXO2-4000HC-4TG144C',
    description: 'FPGA device',
)

option(
    'hw_use_docker',
    type: 'boolean',
    value: true,
    description: 'Run FPGA tools and simulations in Docker containers',
)

option(
    'fpga_cable',
    type: 'string',
    value: 'ft2232',
    description: 'FPGA cable type',
)
