option(
    'quartus_search_path',
    type: 'string',
    description: 'Path to Quartus binary',
)
option(
    'questa_search_path',
    type: 'string',
    description: 'Path to Questa binary',
)
option(
    'device',
    type: 'string',
    value: '10M04SCE144C8G',
    description: 'FPGA device',
)
option(
    'family',
    type: 'string',
    value: 'MAX 10',
    description: 'FPGA family',
)
