option(
    'diamond_search_path',
    type: 'string',
    description: 'Path to Lattice Diamond binary',
)
option(
    'questa_search_path',
    type: 'string',
    description: 'Path to Questasim binary',
)
option(
    'device',
    type: 'string',
    value: 'LCMXO2-4000HC-4TG144C',
    description: 'FPGA device',
)
