option(
    'diamond_search_path',
    type: 'string',
    description: 'Path to Lattice Diamond binary',
)
option(
    'questa_search_path',
    type: 'string',
    description: 'Path to Questasim binary',
)
option(
    'device',
    type: 'string',
    value: 'LCMXO2-4000HC-4TG144C',
    description: 'FPGA device',
)
option(
    'diamondc_custom_cmd',
    type: 'array',
    description: 'Custom command to run Diamond compiler. For example, -Ddiamondc_custom_cmd=docker,compose,-f,../docker/compose.yml,run,--rm,-T,build,diamondc',
)

option(
    'vlog_custom_cmd',
    type: 'array',
    description: 'Custom command to run vlog',
)

option(
    'vsim_custom_cmd',
    type: 'array',
    description: 'Custom command to run vsim',
)

option(
    'fpga_cable',
    type: 'string',
    value: 'ft2232',
    description: 'FPGA cable type',
)
